retrieveUnpackaged/objects/User.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Official__c</fullName>
        <description>Used for WebForms approval process</description>
        <inlineHelpText>Used for WebForms approval process</inlineHelpText>
        <label>Funding Official</label>
        <relationshipName>Funding_Official</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Org__c</fullName>
        <label>HR Org</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN_ID__c</fullName>
        <externalId>true</externalId>
        <label>LAN ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Stop__c</fullName>
        <label>Mail Stop</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occ_Series__c</fullName>
        <label>Occupational Series</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PASTA_Person_ID__c</fullName>
        <externalId>true</externalId>
        <label>PASTA Person ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Plan__c</fullName>
        <label>Pay Plan</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Type__c</fullName>
        <label>Person Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPV_CODE_DESCR__c</fullName>
        <label>Supervisor Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Environment__c</fullName>
        <label>Session Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_IP__c</fullName>
        <label>Session IP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Timestamp__c</fullName>
        <label>Session Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Token__c</fullName>
        <label>Session Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_2__c</fullName>
        <description>Used for WebForms approval process</description>
        <inlineHelpText>Used for WebForms approval process</inlineHelpText>
        <label>Supervisor 2</label>
        <relationshipName>Supervisor_2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <description>Used for WebForms approval process</description>
        <inlineHelpText>Used for WebForms approval process</inlineHelpText>
        <label>Supervisor</label>
        <relationshipName>Supervisor</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Supervisors__c</fullName>
        <label>Supervisors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Keeper__c</fullName>
        <description>Used for WebForms approval process</description>
        <inlineHelpText>Used for WebForms approval process</inlineHelpText>
        <label>Time Keeper</label>
        <relationshipName>Time_Keeper</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Training_Officer__c</fullName>
        <description>Used for WebForms approval process</description>
        <inlineHelpText>Used for WebForms approval process</inlineHelpText>
        <label>Training Officer</label>
        <relationshipName>Training_Officer</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>